--- a/bahea-cine/src/app/globals.css
+++ b/bahea-cine/src/app/globals.css
@@ -47,10 +47,6 @@ table {
 	border-spacing: 0;
 }
 
-h1 {
-  color: blue;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  font-size: 4.0rem;
+.Menu {
+	padding-left: 1rem;
 }
