--- a/bahea-cine/src/app/globals.css
+++ b/bahea-cine/src/app/globals.css
@@ -47,6 +47,45 @@ table {
 	border-spacing: 0;
 }
 
-.Menu {
-	padding-left: 1rem;
+.container {
+	max-width: 1080px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+header {
+	background-color: black;
+	width: 100%;
+	padding: 20px;
+}
+
+.logo {
+	width: 25%;
+}
+
+.logo img {
+	width: 150px;
+}
+
+.menu {
+	width: 50%;
+}
+
+.menu nav a {
+	color: white;
+	text-decoration: none;
+	padding-right: 2.4rem;
+	font-size: 22px;
+}
+
+.menu nav a:hover {
+	background-color: white;
+	color: black;
+	padding: 0.8rem;
+	border-radius: 15px;
+	transition: 0.6s;
+	margin-left: 0.3rem;
 }
