--- a/bahea-cine/src/app/globals.css
+++ b/bahea-cine/src/app/globals.css
@@ -90,7 +90,7 @@ header {
 }
 
 .logo img {
-	width: 130px;
+	width: 120px;
 }
 
 .menu {
@@ -102,7 +102,7 @@ header {
     text-decoration: none;
     padding: 0.6rem 1.1rem;  
     font-size: 19.5px;
-    transition: 0.7s;
+    transition: 0.6s;
 	border-radius: 15px;
 }
 
@@ -119,29 +119,29 @@ header {
 
 .container-login {
 	position: absolute;
-    right: 30px;
-	padding: 3rem;
+    right: 0;
+	top: 0;
+	padding: 1rem;
 	border-radius: 12px;
+    z-index: 1000; 
 }
 
-.container-login span {
-	position: absolute;
-	bottom: 90%;
-	left: 80px;
+.container-login .span {
+	font-size: 13px;
 	color: white;
-	font-size: 16px;
-	top: 2px;
 }
 
 .container-login nav a {
 	background-color: rgba(255, 0, 0, 0.582);
 	position: relative;
-	padding: 0.49rem 0.78rem;
+	bottom: 0;
+	padding: 0.45rem 0.5rem;
 	color: white;
 	text-decoration: none;
-	transition: 0.7s;
+	transition: 0.6s;
 	border-radius: 10px;
-	margin: 8px;
+	font-size: 13px;
+	display: inline-block;
 }
 
 .container-login nav a:hover {
@@ -164,20 +164,19 @@ header {
         max-width: 110px; 
     }
 
-    .menu nav a, .container-login nav a {
-        font-size: 1.1rem; 
+    .menu nav a {
+        font-size: 1.15rem; 
     }
 
     .container-login nav a {
-        right: 0; 
-        padding: 0.4rem 0.6rem;
-		font-size: 15px;
-		left: 15%;
+        padding: 0.47rem 0.67rem;
+		font-size: 12px;
+		left: 0;
     }
 
-	.container-login span {
-		font-size: 0.96rem;
-		left: 32%;
+	.container-login .span {
+		font-size: 12px;
+		left: 33%;
 		top: 6px;
 	}
 }
