Tela login e cadaastro

--- a/bahea-cine/src/app/lancamentos/page.style.css
+++ b/bahea-cine/src/app/lancamentos/page.style.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #4a0404;
+    background-color: rgb(34, 1, 1);
     color: white;
     padding: 20px;
     text-align: center;
