--- a/bahea-cine/src/app/cadastro/page.style.css
+++ b/bahea-cine/src/app/cadastro/page.style.css
@@ -1,3 +1,75 @@
-h1 {
-    color: white;
+.cadastro-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: rgb(34, 1, 1);
+  position: relative;
+}
+
+.logo {
+  width: 100px;
+  height: auto;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.cadastro-title-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 150px;
+}
+
+.title-logo {
+  width: 50px;
+  height: auto;
+  margin: 0 20px;
+}
+
+.cadastro-title {
+  color: #ffffff;
+  font-size: 50px;
+  text-shadow: 1px 0 #ffffff, 0 1px #ffffff, 1px 0 #ffffff, 0 1px #ffffff;
+}
+
+.cadastro-form {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+}
+
+.cadastro-input {
+  margin-bottom: 10px;
+  padding: 15px;
+  border-radius: 30px;
+  border: 3px solid #ffffff;
+  font-size: 18px;
+}
+
+.cadastro-button {
+  padding: 10px;
+  border-radius: 30px;
+  border: none;
+  background-color: #038ab3;
+  color: #fff;
+  cursor: pointer;
+  width: 60%;
+  align-self: center;
+}
+
+.options {
+  margin-top: 70px;
+}
+
+.option-link {
+  color: #038ab3;
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+.option-divider {
+  margin: 0 10px;
+  color: #fff;
 }
