--- a/bahea-cine/src/app/cartaz/page.style.css
+++ b/bahea-cine/src/app/cartaz/page.style.css
@@ -1,3 +1,42 @@
-h1 {
+.container {
+    background-color: #4a0404;
     color: white;
-}
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .title {
+    font-size: 2em;
+    margin-bottom: 10px; 
+    position:relative;
+    left:50%;
+    top:10px;
+  }
+  
+  .movies {
+    position:relative;
+    margin-top: 30px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .movie-row {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .movie-card {
+    background-color: #333;
+    padding: 10px;
+    width: 200px;
+    text-align: center;
+    margin:2rem;
+  }
+  
+  .poster {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 10px;
+  }
+  
