--- a/bahea-cine/src/app/lancamentos/page.style.css
+++ b/bahea-cine/src/app/lancamentos/page.style.css
@@ -19,6 +19,11 @@
     justify-content: center;
     gap: 20px;
   }
+
+  .movie-row {
+    display: flex;
+    justify-content: space-between;
+  }
   
   .movie-card {
     background-color: #333;
@@ -29,7 +34,7 @@
   
   .poster {
     width: 100%;
-    height: auto;
+    height: 250px;
     margin-bottom: 10px;
   }
   
