--- a/bahea-cine/src/app/cartaz/page.style.css
+++ b/bahea-cine/src/app/cartaz/page.style.css
@@ -1,37 +1,59 @@
 .container {
-  background-color: #4a0404;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: rgb(34, 1, 1);
+  position: relative;
+}
+
+.back-link {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: orange;
   color: white;
-  padding: 20px;
-  text-align: center;
+  text-decoration: none;
+  padding: 10px 20px;
+  border: 2px solid orange;
+  border-radius: 5px;
 }
 
 .title {
-  font-size: 2em;
-  margin-bottom: 10px; 
-  position:relative;
-  left:50%;
-  top:10px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background-color: orangered;
+  color: white;
+  padding: 10px 20px;
+  border: 2px solid orange;
+  border-radius: 5px;
+  font-size: 30px;
+  display: inline-block;
 }
 
 .movies {
-  position:relative;
-  margin-top: 30px;
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
+  width: 100%;
+  margin-top: 100px;
 }
 
 .movie-row {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .movie-card {
-  background-color: #333;
+  background-color: black;
   padding: 10px;
   width: 200px;
   text-align: center;
-  margin:2rem;
+  margin: 1rem;
 }
 
 .poster {
