--- a/bahea-cine/src/app/login/page.style.css
+++ b/bahea-cine/src/app/login/page.style.css
@@ -1,9 +1,13 @@
+ body {
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+ }
+
 .login-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 88vh;
   background-color: rgb(34, 1, 1);
   position: relative;
 }
@@ -19,7 +23,7 @@
 .login-title-container {
   display: flex;
   align-items: center;
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 
 .title-logo {
@@ -42,7 +46,7 @@
 
 .login-input {
   margin-bottom: 20px;
-  padding: 15px;
+  padding: 12px;
   border-radius: 30px;
   border: 3px solid #ffffff;
   font-size: 18px;
@@ -52,11 +56,23 @@
   padding: 10px;
   border-radius: 30px;
   border: none;
+  font-size: 0.95rem;
   background-color: #038ab3;
   color: #fff;
   cursor: pointer;
   width: 60%;
   align-self: center;
+  transition: 0.7s;
+}
+
+.login-button:hover{
+  background-color: #025670;
+  
+}
+
+.login-button:active {
+  color: #7c7c7c;
+  transition: none;
 }
 
 .options {
