--- a/bahea-cine/src/app/lancamentos/page.style.css
+++ b/bahea-cine/src/app/lancamentos/page.style.css
@@ -1,23 +1,35 @@
 .container {
     background-color: #4a0404;
-    color: white;
-    padding: 20px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    position: relative;
   }
   
-  h1 {
+  .title {
+    position: absolute;
+    top: 20px;
+    color: #fff;
     font-size: 2em;
   }
   
   h2 {
+    position: absolute;
+    top: 60px;
+    color: white;
     font-size: 1.5em;
   }
   
   .movies {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    gap: 20px;
+    color: white;
+    margin: 10px;
+    gap: 25px;
   }
 
   .movie-row {
@@ -33,7 +45,7 @@
   }
   
   .poster {
-    width: 100%;
+    width: 175px;
     height: 250px;
     margin-bottom: 10px;
   }
