--- a/bahea-cine/src/app/login/page.style.css
+++ b/bahea-cine/src/app/login/page.style.css
@@ -1,4 +1,6 @@
- body {
+* {
+  margin: 0;
+  padding: 0;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
  }
 
@@ -79,13 +81,27 @@
   margin-top: 70px;
 }
 
+.options .no-account {
+  text-align: center;
+  margin-bottom: 20px;
+  color: white;
+}
+
 .option-link {
   color: #038ab3;
   text-decoration: none;
-  margin-right: 10px;
+  margin: 10px;
+}
+
+.option-link:hover{
+  color: #00c3ff;
+}
+
+.option-link:active{
+  color: #fff;
 }
 
 .option-divider {
-  margin: 0 10px;
+  margin: 2px;
   color: #fff;
 }
