--- a/bahea-cine/src/app/contato/page.style.css
+++ b/bahea-cine/src/app/contato/page.style.css
@@ -37,7 +37,7 @@ body {
 }
 
 .navbar .logo img {
-  height: 2.5rem; /* 40px */
+  height: 2.5rem;
   vertical-align: middle;
 }
 
@@ -49,10 +49,10 @@ body {
 }
 
 .navbar nav a {
-  margin: 0 0.5rem; /* 8px */
+  margin: 0 0.5rem;
   color: white;
   text-decoration: none;
-  font-size: 1rem; /* 16px */
+  font-size: 1rem;
 }
 
 .navbar .login {
@@ -62,8 +62,8 @@ body {
 
 .navbar .login a {
   background-color: #800000;
-  padding: 0.3125rem 0.625rem; /* 5px 10px */
-  border-radius: 0.3125rem; /* 5px */
+  padding: 0.3125rem 0.625rem;
+  border-radius: 0.3125rem;
   color: white;
   text-decoration: none;
   white-space: nowrap;
@@ -75,17 +75,17 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1.25rem; /* 20px */
+  padding: 1.25rem;
 }
 
 .contact-card {
   background-color: #d64700;
-  border-radius: 0.625rem; /* 10px */
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1); /* 0 4px 8px */
-  padding: 1.25rem; /* 20px */
+  border-radius: 0.625rem;
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  padding: 1.25rem;
   width: 100%;
-  max-width: 25rem; /* 400px */
-  margin-bottom: 1rem; /* Espaçamento abaixo do cartão de contato */
+  max-width: 25rem;
+  margin-bottom: 1rem;
 }
 
 .contact-header {
@@ -93,56 +93,56 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #800000;
-  border-radius: 0.3125rem; /* 5px */
-  padding: 0.625rem; /* 10px */
+  border-radius: 0.3125rem;
+  padding: 0.625rem;
   color: white;
-  margin-bottom: 1rem; /* 20px */
+  margin-bottom: 1rem;
 }
 
 .contact-header h1 {
   margin: 0;
-  font-size: 1.5rem; /* 24px */
+  font-size: 1.5rem;
 }
 
 .input-group {
   display: flex;
   flex-direction: column;
-  margin-bottom: 0.9375rem; /* 15px */
+  margin-bottom: 0.9375rem;
 }
 
 .input-group label {
-  margin-bottom: 0.3125rem; /* 5px */
+  margin-bottom: 0.3125rem;
   color: white;
 }
 
 .input-group input,
 .input-group textarea {
-  padding: 0.625rem; /* 10px */
-  border: 0.0625rem solid #ccc; /* 1px */
-  border-radius: 0.3125rem; /* 5px */
+  padding: 0.625rem;
+  border: 0.0625rem solid #ccc;
+  border-radius: 0.3125rem;
   outline: none;
-  font-size: 1rem; /* 16px */
+  font-size: 1rem;
 }
 
 .input-group input {
-  height: 2.5rem; /* 40px */
+  height: 2.5rem;
 }
 
 .input-group textarea {
-  height: 6.25rem; /* 100px */
+  height: 6.25rem;
   resize: none;
 }
 
 button {
   width: 100%;
-  padding: 0.625rem; /* 10px */
+  padding: 0.625rem;
   border: none;
-  border-radius: 0.3125rem; /* 5px */
+  border-radius: 0.3125rem;
   background-color: #800000;
   color: white;
-  font-size: 1rem; /* 16px */
+  font-size: 1rem;
   cursor: pointer;
-  margin-top: 0.625rem; /* 10px */
+  margin-top: 0.625rem;
 }
 
 button:hover {
@@ -159,19 +159,18 @@ button:hover {
   background-color: white;
   color: black;
   border: 2px solid black;
-  padding: 0.625rem 1.25rem; /* 10px 20px */
-  border-radius: 0.3125rem; /* 5px */
+  padding: 0.625rem 1.25rem;
+  border-radius: 0.3125rem;
   cursor: pointer;
-  font-size: 1rem; /* 16px */
+  font-size: 1rem;
   width: 100%;
-  max-width: 25rem; /* 400px */
+  max-width: 25rem;
 }
 
 .back-button:hover {
   background-color: #f0f0f0;
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
   .navbar nav {
     flex-direction: column;
@@ -179,7 +178,7 @@ button:hover {
   }
 
   .navbar nav a {
-    margin: 0.3125rem 0; /* 5px 0 */
+    margin: 0.3125rem 0;
   }
 
   .contact-card {
