--- a/bahea-cine/src/app/bomboniere/page.style.css
+++ b/bahea-cine/src/app/bomboniere/page.style.css
@@ -1,9 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+ }
+
+body {
+  background-color: #4a0404;
+}
+
 .bomboniere-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: rgb(34, 1, 1);
     position: relative;
   }
   
