--- a/bahea-cine/src/app/cadastro/page.style.css
+++ b/bahea-cine/src/app/cadastro/page.style.css
@@ -1,8 +1,12 @@
- * {
+* {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
  }
+
+body {
+  background-color: #4a0404;
+}
 
 .cadastro-container {
   display: flex;
@@ -10,7 +14,6 @@
   align-items: center;
   justify-content: center;
   height: 88vh;
-  background-color: rgb(34, 1, 1);
   position: relative;
 }
 
@@ -25,7 +28,7 @@
 .cadastro-title-container {
   display: flex;
   align-items: center;
-  margin-bottom: 98px;
+  margin-bottom: 65px;
 }
 
 .title-logo {
@@ -74,4 +77,38 @@
 .cadastro-button:active {
   color: #7c7c7c;
   transition: none;
+}
+
+.options {
+  position: relative;
+  top: 42px;
+  text-align: center;
+}
+
+.container-options {
+  position: relative;
+  top: 12px;
+}
+
+.options .title-login {
+  color: #fff;
+  text-align: center;
+}
+
+.option-link {
+  color: #00c3ff;
+  text-decoration: none;
+}
+
+.option-link:hover {
+  color: #00c3ffb0;
+}
+
+.option-link:active{
+  color: #fff;
+}
+
+.option-divider {
+  margin: 10px;
+  color: #fff;
 }
