--- a/bahea-cine/src/app/lancamentos/page.style.css
+++ b/bahea-cine/src/app/lancamentos/page.style.css
@@ -1,5 +1,14 @@
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+body {
+  background-color: #4a0404;
+}
+
 .container {
-    background-color: #4a0404;
     display: flex;
     flex-direction: column;
     align-items: center;
