--- a/bahea-cine/src/app/login/page.style.css
+++ b/bahea-cine/src/app/login/page.style.css
@@ -4,13 +4,16 @@
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
  }
 
+body {
+  background-color: #4a0404;
+}
+
 .login-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 88vh;
-  background-color: rgb(34, 1, 1);
   position: relative;
 }
 
@@ -69,7 +72,6 @@
 
 .login-button:hover{
   background-color: #025670;
-  
 }
 
 .login-button:active {
@@ -83,18 +85,18 @@
 
 .options .no-account {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   color: white;
 }
 
 .option-link {
-  color: #038ab3;
+  color: #00c3ff;
   text-decoration: none;
   margin: 10px;
 }
 
 .option-link:hover{
-  color: #00c3ff;
+  color: #00c3ffb0;
 }
 
 .option-link:active{
