--- a/bahea-cine/src/app/pre-vendas/page.style.css
+++ b/bahea-cine/src/app/pre-vendas/page.style.css
@@ -1,24 +1,33 @@
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+body {
+  background-color: #4a0404;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: rgb(34, 1, 1);
   position: relative;
 }
 
 .back-link {
   position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: background-color 0.3s, color 0.3s;
+  top: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 .title {
@@ -28,7 +37,7 @@
   background-color: black;
   color: white;
   padding: 10px 20px;
-  border: 2px solid rgb(34, 1, 1);
+  border: 2px solid #4a0404;;
   border-radius: 5px;
   font-size: 30px;
   display: inline-block;
