--- a/bahea-cine/src/app/compras/page.style.css
+++ b/bahea-cine/src/app/compras/page.style.css
@@ -1,79 +1,105 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-}
- 
-body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  }
+  
+  body {
     background-color: #4a0404;
-}
-
-
-.title {
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100vh;
+    position: relative;
+  }
+  
+  .title {
     font-size: 2rem;
     margin: 20px 0;
     padding: 10px;
     border: 2px solid white;
     text-align: center;
     color: white;
-}
-
-.content {
+  }
+  
+  .content {
     display: flex;
     justify-content: space-between;
     gap: 20px;
-}
-
-.left-content {
+  }
+  
+  .left-content {
     flex-grow: 1;
-}
-
-.subtitle {
+  }
+  
+  .subtitle {
     font-size: 1.5rem;
     margin-bottom: 10px;
     color: white;
-}
-
-.product-table {
+  }
+  
+  .product-table {
     width: 100%;
     border-collapse: collapse;
-}
-
-.product-table th,
-.product-table td {
+  }
+  
+  .product-table th,
+  .product-table td {
     border: 1px solid white;
     padding: 8px;
     color: white;
-}
-
-.product-table th {
+  }
+  
+  .product-table th {
     text-align: left;
     background-color: rgba(255, 255, 255, 0.2);
-}
-
-.product-table tbody tr:nth-child(even) {
+  }
+  
+  .product-table tbody tr:nth-child(even) {
     background-color: rgba(255, 255, 255, 0.1);
-}
-
-.right-content {
+  }
+  
+  .right-content {
     flex-basis: 30%;
     text-align: center;
-}
-
-.total {
+  }
+  
+  .total {
     background-color: rgba(255, 255, 255, 0.2);
     padding: 20px;
     border-radius: 8px;
-}
-
-.amount {
+  }
+  
+  .amount {
     font-size: 1.2rem;
     font-weight: bold;
     color: white;
     margin-bottom: 10px;
-}
-
-.payment-message {
+  }
+  
+  .payment-message {
     font-size: 1rem;
     color: white;
-}
+  }
+  
+  .back-link {
+    position: absolute;
+    bottom: 20px;
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .back-link:hover {
+    background-color: black;
+    color: white;
+  }
+  
