--- a/bahea-cine/src/app/lancamentos/page.style.css
+++ b/bahea-cine/src/app/lancamentos/page.style.css
@@ -1,7 +1,7 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -9,83 +9,143 @@ body {
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    position: relative;
-  }
-  
-  .title {
-    position: absolute;
-    top: 20px;
-    color: #fff;
-    font-size: 2em;
-  }
-  
-  h2 {
-    position: absolute;
-    top: 60px;
-    color: white;
-    font-size: 1.5em;
-  }
-  
-  .movies {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    margin: 10px;
-    gap: 25px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /* Alinha itens ao início da coluna */
+  height: 100vh;
+  position: relative;
+  padding-top: 60px; /* Adiciona espaço no topo para não sobrepor o título */
+}
 
-  .movie-row {
-    display: flex;
-    justify-content: space-between;
+.back-link {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.back-link:hover {
+  background-color: black;
+  color: white;
+}
+
+.title {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  border: 2px solid #4a0404;
+  border-radius: 5px;
+  font-size: 30px;
+  display: inline-block;
+}
+
+.subtitle {
+  position: absolute;
+  top: 70px;
+  left: 20px;
+  background-color: black;
+  color: white;
+  padding: 5px 10px;
+  border: 2px solid #4a0404;
+  border-radius: 5px;
+  font-size: 24px;
+  display: inline-block;
+}
+
+.movies {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  width: 100%;
+  margin-top: 100px; /* Ajusta a margem superior para empurrar os filmes para baixo */
+}
+
+.movie-row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.movie-card {
+  background-color: black;
+  padding: 10px;
+  width: 220px;
+  text-align: center;
+  margin: 1rem;
+  border: 2px solid white;
+  border-radius: 5px;
+}
+
+.poster {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 5px; /* Reduz a margem inferior do pôster para levantar o título "Estreia" */
+}
+
+.pre-sale {
+  font-weight: bold;
+  color: #ffcc00;
+  margin-bottom: 10px; /* Adiciona uma margem inferior ao título "Estreia" */
+}
+
+.movie-info {
+  background-color: #333;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  height: 150px; /* Altura fixa para uniformizar os quadros de informação */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Distribui uniformemente o conteúdo dentro do quadro */
+}
+
+.movie-info h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.movie-info p {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  .movies {
+    flex-direction: column;
   }
   
   .movie-card {
-    background-color: #333;
-    padding: 10px;
-    width: 200px;
-    text-align: center;
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  .movies {
+    flex-direction: row;
   }
   
-  .poster {
-    width: 175px;
-    height: 250px;
-    margin-bottom: 10px;
+  .movie-card {
+    width: 45%;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  .movies {
+    flex-direction: row;
   }
   
-  @media only screen and (max-width: 600px) {
-    .movies {
-      flex-direction: column;
-    }
-    
-    .movie-card {
-      width: 100%;
-    }
+  .movie-card {
+    width: 30%;
   }
-  
-  @media only screen and (min-width: 601px) and (max-width: 768px) {
-    .movies {
-      flex-direction: row;
-    }
-    
-    .movie-card {
-      width: 45%;
-    }
-  }
-  
-  @media only screen and (min-width: 769px) {
-    .movies {
-      flex-direction: row;
-    }
-    
-    .movie-card {
-      width: 30%;
-    }
-  }
-  
+}
