--- a/bahea-cine/src/app/pre-vendas/page.style.css
+++ b/bahea-cine/src/app/pre-vendas/page.style.css
@@ -1,7 +1,7 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -12,9 +12,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start; 
   height: 100vh;
   position: relative;
+  padding-top: 60px; 
 }
 
 .back-link {
@@ -30,6 +31,11 @@ body {
   transition: background-color 0.3s, color 0.3s;
 }
 
+.back-link:hover {
+  background-color: black;
+  color: white;
+}
+
 .title {
   position: absolute;
   top: 20px;
@@ -37,7 +43,7 @@ body {
   background-color: black;
   color: white;
   padding: 10px 20px;
-  border: 2px solid #4a0404;;
+  border: 2px solid #4a0404;
   border-radius: 5px;
   font-size: 30px;
   display: inline-block;
@@ -49,6 +55,7 @@ body {
   align-items: center;
   color: white;
   width: 100%;
+  margin-top: 80px; 
 }
 
 .movie-row {
@@ -60,13 +67,42 @@ body {
 .movie-card {
   background-color: black;
   padding: 10px;
-  width: 200px;
+  width: 220px;
   text-align: center;
   margin: 1rem;
+  border: 2px solid white;
+  border-radius: 5px;
 }
 
 .poster {
   width: 100%;
   height: 300px;
+  margin-bottom: 5px; 
+}
+
+.pre-sale {
+  font-weight: bold;
+  color: #ffcc00;
+  margin-bottom: 10px; 
+}
+
+.movie-info {
+  background-color: #333;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  height: 150px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+}
+
+.movie-info h2 {
+  font-size: 20px;
   margin-bottom: 10px;
+}
+
+.movie-info p {
+  font-size: 14px;
+  margin-bottom: 5px;
 }
