--- a/bahea-cine/src/app/bomboniere/page.style.css
+++ b/bahea-cine/src/app/bomboniere/page.style.css
@@ -2,84 +2,103 @@
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
- }
+}
 
 body {
   background-color: #4a0404;
 }
 
 .bomboniere-container {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.25rem;
+  position: relative;
+}
+
+.logo {
+  width: 5.625rem;
+  height: auto;
+  position: absolute;
+  top: 0.625rem;
+  left: 0.625rem;
+}
+
+.bomboniere-title {
+  font-size: 2.5rem;
+  color: #ffffff;
+  text-shadow: 0.0625rem 0 #ffffff, 0 0.0625rem #ffffff, 0.0625rem 0 #ffffff, 0 0.0625rem #ffffff;
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
+
+.shelf {
+  width: 100%;
+  max-width: 75rem;
+  background-color: #2d2d2d;
+  padding: 1.25rem;
+  border-radius: 0.625rem;
+  box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.1);
+  margin-top: 1.25rem;
+}
+
+.snack-columns {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.snack-column {
+  width: 48%;
+}
+
+.snack-subcategory {
+  font-size: 1.5rem;
+  color: #ffffff;
+  text-shadow: 0.0625rem 0 #ffffff, 0 0.0625rem #ffffff, 0.0625rem 0 #ffffff, 0 0.0625rem #ffffff;
+  margin-bottom: 3.75rem;
+  text-align: center;
+}
+
+.snack-items {
+  display: flex;
+  flex-direction: column;
+  color: #ffffff;
+}
+
+.snack-item {
+  text-align: center;
+  margin-bottom: 2.5rem;
+}
+
+.snack-image {
+  width: 5.625rem;
+  height: auto;
+  margin-bottom: 0.625rem;
+}
+
+.snack-name {
+  font-size: 1.375rem;
+  color: #ffffff;
+  margin-bottom: 1.25rem;
+}
+
+.add-to-cart-button {
+  padding: 0.625rem 1.25rem;
+  background-color: #038ab3;
+  color: #fff;
+  border: none;
+  border-radius: 0.9375rem;
+  cursor: pointer;
+}
+
+@media (max-width: 48rem) {
+  .snack-columns {
     flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    position: relative;
   }
-  
-  .logo {
-    width: 180px;
-    height: auto;
-    position: absolute; /* Adicionado para posicionar a logo no canto superior esquerdo */
-    top: 10px;
-    left: 10px;
-  }
-  
-  .bomboniere-title {
-    font-size: 40px;
-    color: #ffffff;
-    text-shadow: 1px 0 #ffffff, 0 1px #ffffff, 1px 0 #ffffff, 0 1px #ffffff;
-    margin-bottom: 220px;
-    text-align: center; /* Adicionado para centralizar o título */
-  }
-  
-  .shelf {
+
+  .snack-column {
     width: 100%;
-    background-color: #2d2d2d; /* Adicionado para criar a prateleira */
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adicionado para criar a prateleira */
+    margin-bottom: 1.25rem;
   }
-  
-  .snack-category {
-    font-size: 30px;
-    text-shadow: 1px 0 #ffffff, 0 1px #ffffff, 1px 0 #ffffff, 0 1px #ffffff;
-    color: #ffffff;
-    margin-bottom: 20px;
-  }
-  
-  .snack-items {
-    display: flex;
-    color: #ffffff;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    overflow-x: auto; /* Adicionado para criar um carrossel */
-  }
-  
-  .snack-item {
-    width: 200px;
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .snack-image {
-    width: 90px;
-    height: auto;
-    margin-bottom: 10px;
-  }
-  
-  .snack-name {
-    font-size: 22px;
-    color: #ffffff;
-    margin-bottom: 20px;
-  }
-  
-  .add-to-cart-button {
-    padding: 10px 20px;
-    background-color: #038ab3;
-    color: #fff;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-  }
-  
+}
