--- a/bahea-cine/src/app/lancamentos/page.style.css
+++ b/bahea-cine/src/app/lancamentos/page.style.css
@@ -12,10 +12,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; /* Alinha itens ao início da coluna */
+  justify-content: flex-start; 
   height: 100vh;
   position: relative;
-  padding-top: 60px; /* Adiciona espaço no topo para não sobrepor o título */
+  padding-top: 60px; 
 }
 
 .back-link {
@@ -68,7 +68,7 @@ body {
   align-items: center;
   color: white;
   width: 100%;
-  margin-top: 100px; /* Ajusta a margem superior para empurrar os filmes para baixo */
+  margin-top: 100px; 
 }
 
 .movie-row {
@@ -90,13 +90,13 @@ body {
 .poster {
   width: 100%;
   height: 300px;
-  margin-bottom: 5px; /* Reduz a margem inferior do pôster para levantar o título "Estreia" */
+  margin-bottom: 5px; 
 }
 
 .pre-sale {
   font-weight: bold;
   color: #ffcc00;
-  margin-bottom: 10px; /* Adiciona uma margem inferior ao título "Estreia" */
+  margin-bottom: 10px; 
 }
 
 .movie-info {
@@ -104,10 +104,10 @@ body {
   padding: 10px;
   border-radius: 5px;
   color: white;
-  height: 150px; /* Altura fixa para uniformizar os quadros de informação */
+  height: 150px; 
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* Distribui uniformemente o conteúdo dentro do quadro */
+  justify-content: space-between;
 }
 
 .movie-info h2 {
