--- a/bahea-cine/src/app/styles/home.style.css
+++ b/bahea-cine/src/app/styles/home.style.css
@@ -14,7 +14,6 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	max-width: 1920px;
 	margin: 0 auto;
 	padding: 0 auto;
 }
@@ -28,11 +27,8 @@ header {
 }
 
 .logo img {
-	width: 175px;
-}
-
-.menu {
-	padding: 2.5rem;
+	width: 140px;
+	margin-right: 30px;
 }
 
 .menu nav a {
@@ -60,9 +56,8 @@ header {
     align-items: center; 
     justify-content: center;
 	position: absolute;
-    top: 8px;
-	right: 1px;
-	padding: 0.4rem;
+    top: 13px;
+	right: 6px;
 }
 
 .container-login .login-img {
@@ -80,7 +75,7 @@ header {
     text-decoration: none;
     transition: 0.6s;
     padding: 0.65rem;
-    font-size: 13px;
+    font-size: 12px;
 }
 
 .container-login nav a:hover {
@@ -138,8 +133,7 @@ header {
     .container-login nav a {
 		padding: 0.55rem;
 		font-size: 11px;
-		bottom: 6px;
+		bottom: 5px;
 		left: 0;
     }
 }
-
