--- a/bahea-cine/src/app/styles/home.style.css
+++ b/bahea-cine/src/app/styles/home.style.css
@@ -87,29 +87,70 @@ header {
 	transition: none;
 }
 
-.container-section {
+.circle-container {
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: rgba(249, 0, 0, 0.444);
-	padding: 0 15px;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #e51e2f;
+	clip-path: circle(45% at center bottom);
 }
 
-.description .title {
-	font-size: 2.5rem;
-  	margin-bottom: 20px;
+.circle-container .logo-circle {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-image: url(/img/logo.png);
+	background-size: 400px;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+}
+
+.circle-content p {
 	color: #fff;
+	font-weight: 600;
+	position: absolute;
+	bottom: 15%;
+	right: 35%;
+	font-size: 28px;
 }
 
-.description p {
-	font-size: 1.2rem;
-  	margin-bottom: 20px;
-  	color: #ffffff;
+.circle-content .palm-right {
+	position: absolute;
+	background-image: url(/img/img-home-login/palm-tree.png);
+	background-size: 650px;
+	background-repeat: no-repeat;
+	background-position: 10% 100%;
+	width: 100%;
+	height: 100%;
+	transform: scaleX(-1);
+	z-index: -1;
 }
 
-@media (max-width: 1920px) {
+.circle-content .palm-left {
+	position: absolute;
+	background-image: url(/img/img-home-login/palm-tree.png);
+	background-size: 650px;
+	background-repeat: no-repeat;
+	background-position: 10% 100%;
+	width: 100%;
+	height: 100%;
+	transform: scaleX(1);
+	z-index: -1;
+}
 
+footer p{
+	background-color: #000000d3;
+	padding: 0.7rem;
+	position: fixed;
+	width: 100%;
+	left: 0;
+	bottom: 0;
+	color: #fff;
+	letter-spacing: 1px;
+	text-align: center;
 }
 
 @media (max-width: 1680px) and (min-width: 1025px) {
@@ -136,4 +177,30 @@ header {
 		bottom: 5px;
 		left: 0;
     }
+
+	.circle-container {
+		width: 95%;
+		left: 5%;
+		text-align: center;
+		background-size: 370px;
+		background-position: 50% 58%;
+	}
+
+	.circle-container .logo-circle {
+		background-size: 305px;
+		background-position: 50% 55%;
+	}
+
+	.circle-content p {
+		font-size: 22px;
+		right: 34%;
+	}
+	
+	.circle-content .palm-right {
+		background-size: 460px;
+	}
+
+	.circle-content .palm-left {
+		background-size: 460px;
+	}
 }
