--- a/bahea-cine/src/app/styles/home.style.css
+++ b/bahea-cine/src/app/styles/home.style.css
@@ -153,7 +153,7 @@ footer p{
 	text-align: center;
 }
 
-@media (max-width: 1680px) and (min-width: 1025px) {
+@media (max-width: 1920px) and (min-width: 1025px) {
     .container {
         width: 100%;
     }
@@ -188,19 +188,20 @@ footer p{
 
 	.circle-container .logo-circle {
 		background-size: 305px;
-		background-position: 50% 55%;
+		background-position: 50% 48%;
 	}
 
 	.circle-content p {
 		font-size: 22px;
-		right: 34%;
+		right: 35%;
 	}
 	
-	.circle-content .palm-right {
-		background-size: 460px;
+	.circle-content .palm-right, .circle-content .palm-left {
+		background-size: 510px;
 	}
 
-	.circle-content .palm-left {
-		background-size: 460px;
+	footer p {
+		padding: 0.4rem;
+		font-size: 0.9rem;
 	}
 }
